--- a/app0-tocbarby.json
+++ b/app0-tocbarby.json
@@ -1,6 +1,6 @@
 {
   "AdsController": {
-    "adNetwork": "unityadmob",
+    "adNetwork": "unity",
     "admobBanner": "ca-app-pub-2325741916621698/4449279220",
     "admobInterstitial": "ca-app-pub-3940256099942544/1033173712",
     "admobReward": "ca-app-pub-2325741916621698/5087557565",
