--- a/app0-tocbarby.json
+++ b/app0-tocbarby.json
@@ -7,15 +7,14 @@
 
     "unityGameId": "5369823",
 
-     "personalnative": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
-   "personaldirection": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocabocapets",
-    "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
-      "personaldirection2": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocabocapets",
-    "personalnative3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
-     "personaldirection3": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocabocapets",
+      "personalnative": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native1.png",
+   "personaldirection": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocaboca_wednesdayaddams",
+    "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native2.png",
+      "personaldirection2": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
+    "personalnative3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native3.png",
+     "personaldirection3": "https://play.google.com/store/apps/details?id=com.cartoonyltd.supercats",
     "personalnative4": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
     "personaldirection4": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocabocapets",
-
 
     "AppEtat": suspended,
     "testMode": true,
