--- a/app0-tocbarby.json
+++ b/app0-tocbarby.json
@@ -16,7 +16,7 @@
     "personalnative4": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
     "personaldirection4": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocabocapets",
 
-    "AppEtat": suspended,
+    "AppEtat": nosuspended,
     "testMode": true,
     "modeads": true,
     "unityBanner": "Banner_Android",
