--- a/app0-tocbarby.json
+++ b/app0-tocbarby.json
@@ -8,15 +8,15 @@
     "unityGameId": "5369823",
 
       "personalnative": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native1.png",
-   "personaldirection": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocaboca_wednesdayaddams",
-    "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native2.png",
-      "personaldirection2": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
+   "personaldirection": "https://play.google.com/store/apps/details?id=com.tocaboca.tocalife.dressup.makeup",
+    "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native1.png",
+      "personaldirection2": "https://play.google.com/store/apps/details?id=com.tocaboca.tocalife.dressup.makeup",
     "personalnative3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native3.png",
      "personaldirection3": "https://play.google.com/store/apps/details?id=com.cartoonyltd.supercats",
     "personalnative4": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
     "personaldirection4": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocabocapets",
 
-    "AppEtat": nosuspended,
+    "AppEtat": suspended,
     "testMode": true,
     "modeads": true,
     "unityBanner": "Banner_Android",
