--- a/app01-tocbarby2.json
+++ b/app01-tocbarby2.json
@@ -12,7 +12,7 @@
     "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native2.png",
       "personaldirection2": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
     "personalnative3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native3.png",
-     "personaldirection3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native2.png",
+     "personaldirection3": "https://play.google.com/store/apps/details?id=com.cartoonyltd.securitybreach",
     "personalnative4": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
     "personaldirection4": "https://play.google.com/store/apps/details?id=com.cartoonyltd.myangelahalloween",
 
