--- a/app01-tocbarby2.json
+++ b/app01-tocbarby2.json
@@ -8,7 +8,7 @@
     "unityGameId": "5366494",
 
      "personalnative": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native1.png",
-   "personaldirection": "https://play.google.com/store/apps/details?id=com.tocaboca.tocalife.dressup.makeup",
+   "personaldirection": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
     "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native2.png",
       "personaldirection2": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
     "personalnative3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native3.png",
@@ -17,7 +17,7 @@
     "personaldirection4": "https://play.google.com/store/apps/details?id=com.cartoonyltd.myangelahalloween",
 
 
-    "AppEtat": nosuspended,
+    "AppEtat": suspended,
     "testMode": true,
     "modeads": true,
     "unityBanner": "Banner_Android",
