--- a/app0-tocbarby.json
+++ b/app0-tocbarby.json
@@ -8,9 +8,9 @@
     "unityGameId": "5369823",
 
       "personalnative": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native1.png",
-   "personaldirection": "https://play.google.com/store/apps/details?id=com.tocaboca.tocalife.dressup.makeup",
+   "personaldirection": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
     "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native1.png",
-      "personaldirection2": "https://play.google.com/store/apps/details?id=com.tocaboca.tocalife.dressup.makeup",
+      "personaldirection2": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
     "personalnative3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native3.png",
      "personaldirection3": "https://play.google.com/store/apps/details?id=com.cartoonyltd.supercats",
     "personalnative4": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
