--- a/app2-angela.json
+++ b/app2-angela.json
@@ -7,17 +7,17 @@
 
     "unityGameId": "5244016",
 
-    "personalnative": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native1.png",
-   "personaldirection": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocaboca_wednesdayaddams",
-    "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native2.png",
-      "personaldirection2": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
+    "personalnative": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
+   "personaldirection": "https://play.google.com/store/apps/details?id=com.cartoonyltd.myangelahalloween",
+    "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
+      "personaldirection2": "https://play.google.com/store/apps/details?id=com.cartoonyltd.myangelahalloween",
     "personalnative3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native3.png",
      "personaldirection3": "https://play.google.com/store/apps/details?id=com.cartoonyltd.supercats",
     "personalnative4": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
     "personaldirection4": "https://play.google.com/store/apps/details?id=com.cartoonyltd.tocabocapets",
 
 
-    "AppEtat": nosuspended,
+    "AppEtat": suspended,
     "testMode": true,
     "modeads": true,
     "unityBanner": "Banner_Android",
