--- a/app01-tocbarby2.json
+++ b/app01-tocbarby2.json
@@ -8,9 +8,9 @@
     "unityGameId": "5366494",
 
      "personalnative": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native1.png",
-   "personaldirection": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
+   "personaldirection": "https://play.google.com/store/apps/details?id=com.dizzystudio.tocaboca.barby.pinkworld",
     "personalnative2": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native2.png",
-      "personaldirection2": "https://play.google.com/store/apps/details?id=com.SecurityBreach.fnaf.fivenightsatfreddys.horror",
+      "personaldirection2": "https://play.google.com/store/apps/details?id=com.dizzystudio.tocaboca.barby.pinkworld",
     "personalnative3": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native3.png",
      "personaldirection3": "https://play.google.com/store/apps/details?id=com.cartoonyltd.securitybreach",
     "personalnative4": "https://raw.githubusercontent.com/sanz89sq/c1-mhmd/main/native4.png",
